--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="demo"></div>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
